--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Lion Roaring"
+      title="View Image"
+     />
+
+    <img 
+      src="/home/ryanruri/Downloads/chelsea.png"
+      alt="Chelsea Logo"
+      title="About"
+     />
+     
+    <img 
+      src="/home/ryanruri/Downloads/Younger-PopSmoke.png"
+      alt="Pop Smoke bnw"  
+      title="More Images"     
+     />  
+  
   </body>
 </html>
